testsuite/tests/properties/invalid_call/not_a_call/test.lkt
from common import FooNode

class BarNode: FooNode {
    fun get_int(): Int = 1

    @exported fun p(): Int = node.get_int
}
